istio/applications/roles.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
